Fix duplicate feature-spacing id, change id to a class

--- a/assests/style.css
+++ b/assests/style.css
@@ -225,7 +225,7 @@ h2 {
     margin-top: 20px;
 }
 
-#features-spacing {
+.features-spacing {
     margin-top: 250px;
 }
 
@@ -278,7 +278,7 @@ footer {
     padding: 20px;
 }
 
-#copyright {       
+#copyright {
     padding-top: 10px;
     padding-bottom: 20px;
     text-align: center;
